<resources>
    <string name="app_name">I DO EAT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_app">I Do Eat</string>
    <string name="contem_des_1">onboardig 1</string>
    <string name="contem_des_2">onboardig 2</string>
    <string name="contem_des_3">onboardig 3</string>
    <string name="title_onb_1">Maintain your daily calories</string>
    <string name="title_onb_2">A healthy diet is a good personality trait</string>
    <string name="title_onb_3">Always Provides Best Recommendations</string>
    <string name="des_onb_1">Maintain daily calories for the body in daily life to be up to standard.</string>
    <string name="des_onb_2">Consuming healthy and correct food can make our body more fit.</string>
    <string name="des_onb_3">The recommendations we provide are an overview of the foods you consume daily.</string>
    <string name="btn_onb_1_lewati">Skip</string>
    <string name="btn_onb_1_lanjut">Next</string>
    <string name="btn_onb_2_kembali">Back</string>
    <string name="btn_onb_2_lanjut">Continue</string>
    <string name="btn_onb_3_kembali">Back</string>
    <string name="btn_onb_3_lanjut">Continue</string>
    <string name="masuk">Login</string>
    <string name="email">Email Address</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="buat_akun">Create Account</string>
    <string name="hint_pass">Enter Password</string>
    <string name="hint_nama">Enter Name</string>
    <string name="buat_password">Create Password</string>
    <string name="konf_password">Confirm Password</string>
    <string name="nama">Full Name</string>
    <string name="sudah_punya_akun">Do you have account?</string>
    <string name="belum_punya_akun">Don\'t have an account yet?</string>
    <string name="gagal_masuk">Incorrect email or password</string>
    <string name="hint_pass_konf">Enter Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="keluar">Logout</string>
    <string name="masuk_google">Login with Google</string>
    <string name="garis_atau">---------- or ----------</string>
    <string name="garis">------------------------------------------------------------</string>
    <string name="set_profile">Profile</string>
    <string name="set_riwayat">Calorie History</string>
    <string name="set_atur_kalori">Set Daily Calorie Pattern</string>
    <string name="set_aplikasi">Application Settings</string>
    <string name="set_bantuan">Help Center</string>
    <string name="set_tentang">About App</string>
    <string name="simpan">Save</string>
    <string name="back_profile">Profile</string>
    <string name="back_riwayat">Calorie History</string>
    <string name="back_atur_kalori">Set Daily Calorie Pattern</string>
    <string name="back_aplikasi">Application Settings</string>
    <string name="back_bantuan">Help Center</string>
    <string name="back_tentang">About App</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="es_bantuan_atas">Can I help you?</string>
    <string name="es_bantuan_atas_2">You can search and read the topic you want to ask.</string>
    <string name="topik_bantuan">Help Topic</string>
    <string name="topik_bantuan_1">Why can\'t I change my profile photo?</string>
    <string name="bantuan_1_img">Help 1</string>
    <string name="bantuan_2_img">Help 2</string>
    <string name="bantuan_3_img">Help 3</string>
    <string name="bantuan_4_img">Help 4</string>
    <string name="bantuan_5_img">Help 5</string>
    <string name="topik_bantuan_1_des">You can\'t change your profile photo? Try doing this:
\n
\n1. Go to the Food Detection Page
\n2. Grant permissions for the camera
\n3. Go again to the Edit Profile page
\n4. Done, you can try to replace the photo.
\n
\nThanks for reading.</string>
    <string name="artikel">Was this article helpful?</string>
    <string name="juddul_artikel">Article</string>
    <string name="hasil_scan">Scan results</string>
    <string name="detail_food">Food Details</string>
    <string name="ubah_bahasa">Change Application Language</string>
    <string name="ubah">Change</string>
    <string name="des_home_atas">Let\'s manage calories every day</string>
    <string name="deteksi_makanan">Food Detection</string>
    <string name="food_name">Suitable Food</string>
    <string name="ingredient">ingredient</string>
    <string name="calories">Calories</string>
    <string name="eat">Eat</string>
    <string name="atur_pola_kalori">Set Calorie Patterns</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight at kg</string>
    <string name="height">Height at cm</string>
    <string name="age">Age at years</string>
    <string name="hitung_kalori_ideal">Calculate the Ideal</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string-array name="activity_array">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderate Activity</item>
        <item>Highly Active</item>
        <item>Very Active</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="diet_array">
        <item>Weight Loss</item>
        <item>Maintain Weight</item>
        <item>Weight Gain</item>
    </string-array>

    <string name="tittlr_riwayat">Food History</string>
    <string name="title_rekom">Food Recommendations</string>
    <string name="title_laporan">Daily Report</string>
    <string name="back">Back</string>
    <string name="versi_1_0_rilis">Version 1.0 Release</string>
    <string name="topik_bantuan_2">How many photos can it detect?</string>
    <string name="topik_bantuan_3">What is this app for?</string>
    <string name="topik_bantuan_4">Why is there so little data?</string>
    <string name="topik_bantuan_5">Why are the food recommendations not as desired?</string>
    <string name="topik_bantuan_2_des">The number of photos that can be detected simultaneously is currently only 2 and depends on several factors. More sophisticated algorithms and more advanced technology may have the ability to detect more photos with greater accuracy.
        \nHowever, low-quality photos, such as photos that are blurry or in complex environmental conditions, may be more difficult to detect accurately. Therefore, in the future we will update again regarding this processing.</string>
    <string name="topik_bantuan_3_des">This application is an application that displays food recommendations based on the user\'s calorie needs and financial ability, as well as providing data on calorie content and food prices sold by nearby restaurants. Additionally, the app will include object image recognition features for food and the ability to predict caloric content.</string>
    <string name="topik_bantuan_4_des">Because currently there are only a few datasets available, but in the future we will expand them. We want all food to be included in this application, to help people to improve their bodies.</string>
    <string name="topik_bantuan_5_des">Because the food recommendations in this application adjust the way users consume their food everyday. This recommendation can be set from the calorie pattern in the profile settings menu.</string>
    <string name="scan_result_detection">The results obtained from the detection of food in the image are: </string>
    <string name="title_notif">No Notification</string>
    <string name="measure_the_food">Measure the food you eat</string>
    <string name="pengeluaran">Spending: Rp177.000</string>

</resources>