<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authentication.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_idoeat" />


    <TextView
        android:id="@+id/tv_judul_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/masuk"
        android:textColor="@color/cp_1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_judul_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="start"
        android:text="@string/email"
        android:textColor="@color/cp_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul_masuk" />

    <com.example.capstone_idoeat.component.EmailEditText
        android:id="@+id/ed_login_email"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/hint_email"
        android:textColor="@color/cp_1"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/kotak_stroke"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul_email" />

    <TextView
        android:id="@+id/tv_judul_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="start"
        android:text="@string/password"
        android:textColor="@color/cp_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <com.example.capstone_idoeat.component.PasswordEditText
        android:id="@+id/ed_login_password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/hint_pass"
        android:textColor="@color/cp_1"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/kotak_stroke"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul_password" />

    <com.example.capstone_idoeat.component.LoginButton
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinssemibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <TextView
        android:id="@+id/atau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garis_atau"
        android:backgroundTint="@color/cp_2"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


    <Button
        android:id="@+id/btnGoogle"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/cp_1"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:text="@string/masuk_google"
        android:textSize="15sp"
        app:cornerRadius="10sp"
        app:icon="@drawable/logogoogle"
        app:iconPadding="-20dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atau" />

    <TextView
        android:id="@+id/tv_Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gagal_masuk"
        android:textColor="@color/cp_1"
        android:fontFamily="@font/poppinssemibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        android:textAlignment="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Error">

        <TextView
            android:id="@+id/tv_belumpunya_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/cp_1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_buat_akun_kecil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/buat_akun"
            android:textColor="@color/cp_1"
            android:textSize="14sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>