<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".onboarding.OnBoardingActivity2">


    <ImageView
        android:id="@+id/iv_onb_2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="70dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_onb_2"
        android:contentDescription="@string/contem_des_2"/>

    <TextView
        android:id="@+id/tv_title_onb_2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/title_onb_2"
        android:textColor="@color/cp_1"
        android:fontFamily="@font/poppinsbold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_onb_2" />

    <TextView
        android:id="@+id/tv_des_onb_2"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/des_onb_2"
        android:textColor="@color/cp_2"
        android:fontFamily="@font/poppinsregular"
        android:textSize="17sp"
        android:gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_onb_2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_onb_2_kembali"
            android:layout_width="105dp"
            android:layout_height="50dp"

            android:fontFamily="@font/poppinsmedium"
            android:text="@string/btn_onb_2_kembali"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:backgroundTint="@color/cp_1"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="#FFFFFF" />

        <ImageView
            android:id="@+id/iv_slide_nav_2"
            android:layout_width="80dp"
            android:layout_height="match_parent"

            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/slide_nav_2"
            android:contentDescription="@string/contem_des_2"/>

        <Button
            android:id="@+id/btn_onb_2_lanjut"
            android:layout_width="100dp"
            android:layout_height="50dp"

            android:fontFamily="@font/poppinsmedium"
            android:text="@string/btn_onb_2_lanjut"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:backgroundTint="@color/cp_1"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>